--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,8 @@
 options:
+  storpool_charm_log_file:
+    type: string
+    description: The full path to a file for logging additional diagnostics.
+    default: /dev/null
   submit_url:
     type: string
     description: The URL to submit the StorPool inventory data to.
