--- a/layer.yaml
+++ b/layer.yaml
@@ -1,2 +1,3 @@
 repo: https://github.com/storpool/charm-storpool-inventory.git
 includes: ['layer:basic', 'layer:storpool-helper']
+exclude: ['unit_tests']
